--- a/cms/cmsapp/templates/cmsapp/course.html
+++ b/cms/cmsapp/templates/cmsapp/course.html
@@ -36,6 +36,17 @@
         <div class="alert alert-secondary my-5" role="alert">
             <h3 class="px-5 text-center">Thank you for visiting!! The course will be available soon</h1>
           </div>
+
+          
+
+          <footer class="text-center text-lg-start bg-light text-muted">
+ 
+            <div class="text-center p-4 eidt" style="background-color: rgba(0, 0, 0, 0.05);">
+              ©Copyright:
+              <a class="text-reset fw-bold" href="">PI Innovations</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
         {%endif%}
 
 
