--- a/cms/cmsapp/templates/cmsapp/tokensend.html
+++ b/cms/cmsapp/templates/cmsapp/tokensend.html
@@ -54,6 +54,8 @@ form{
 		<div class="card-text text-center">
 			
 			Please check your email
+
+			<p>Note: Please check spam of your mail if verificaiton link not found</p>
 		</div>
 	</div>
 </div>
