--- a/cms/cmsapp/templates/cmsapp/index.html
+++ b/cms/cmsapp/templates/cmsapp/index.html
@@ -1,6 +1,7 @@
 {%extends 'base.html'%}
 {%load static%}
 {%block content%}
+{%load myapp_extras%}
        <!-- Page header with logo and tagline-->
     <header class="py-5 bg-light border-bottom mb-4 ">
     <div class="container">
@@ -12,6 +13,19 @@
     
             
         </div>
+        {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="alert alert-primary  my-2 container text-center" >
+                    {{ message }}
+                </div>
+                
+            </div>
+        {% endfor %}
+
+  
     </div>
     </header>
     <!-- Page content-->
@@ -64,7 +78,37 @@
         </div>
     </div>
 </div>
-</style>
+<div class="container mt-2">
+    <div class="row ">
+        <div class="col-md-4 offset-lg-5">
+            {%if courses.has_other_pages%}
+                <div >
+                    <ul class="pagination pagination-lg container">
+                    {% if courses.has_previous %}
+                    <li class="page-item ">
+                        <a class="page-link" href="{%my_url courses.previous_page_number 'page' request.GET.urlencode %}" tabindex="-1" style="color: black;">Previous</a>
+                    </li>
+                    {%endif%}
+                    {%for i in courses.paginator.page_range%}
+
+                    <li class="page-item"><a class="page-link" href="{%my_url i 'page' request.GET.urlencode %}" style="color:rgb(56, 54, 51)">{{i}}</a></li>
+                    
+                    {%endfor%}
+                    {% if courses.has_next %}
+                    <li class="page-item ">
+                        <a class="page-link" href="{%my_url courses.next_page_number 'page' request.GET.urlencode %}" tabindex="-1" style="color: black;">Next</a>
+                    </li>
+                    {%endif%}
+                    </ul>
+                </div>
+            {%endif%}
+        </div>
+    </div>
+</div>
+
+
+
+
 <footer class="text-center text-lg-start bg-light text-muted">
  
     <div class="text-center p-4 eidt" style="background-color: rgba(0, 0, 0, 0.05);">
@@ -75,29 +119,21 @@
 </footer>
 {%else%}
 <div class="alert alert-secondary my-5 container" role="alert">
-    <h3 class="px-5 text-center">Coming soon</h1>
-   
-
+    <h3 class="px-5 text-center">Coming soon</h3>
 </div>
 <br>
 <br>
 <br>
 <br>
-
 <br>
 <br>
-<br>
-<br><br>
-<br>
-<br>
-<br><br>
+ <br>
 <br>
 <br>
+ <br>
 <br>
 <br>
-<br>
-<br>
-<br>
+ <br>
 <br>
 <footer class="text-center text-lg-start bg-light text-muted">
  
@@ -108,6 +144,7 @@
     <!-- Copyright -->
 </footer>
 {%endif%}
+
 
 
 
