--- a/cms/cmsapp/templates/cmsapp/watchlater.html
+++ b/cms/cmsapp/templates/cmsapp/watchlater.html
@@ -7,7 +7,8 @@
 <!-- body -->
 {%if courses%}
 <div class="container-fluid px-5 mt-3">
-    <h1 class="text-center my-5">Read later</h1>
+    <h1 class="text-center my-5">{{course_number}} courses saved in read later</h1>
+    
     <div class="row">
         <div class="col-lg-3 col-sm-0" style="visibility: hidden;">
             <h3 class="mb-4">Select category</h3>
