--- a/cms/cmsapp/templates/cmsapp/tokensend.html
+++ b/cms/cmsapp/templates/cmsapp/tokensend.html
@@ -47,17 +47,16 @@ form{
 }
 </style>
 
-<div class="global-container">
-	<div class="card login-form">
-	<div class="card-body">
-		<h3 class="card-title text-center">We have sent email to you</h3>
-		<div class="card-text text-center">
-			
-			Please check your email
-
-			<p>Note: Please check spam of your mail if verificaiton link not found</p>
-		</div>
-	</div>
+<div class="container my-5">
+<div class="jumbotron">
+  <h1 class="display text-center">Verify account</h1>
+  <p class="lead text-center">Please check your email to verify your account</p>
+  
+  <hr class="my-3">
+  <p class="text-center">Note:Check spam if email not received</p>
+  <p class="lead">
+    
+  </p>
 </div>
 </div>
 {%endblock content%}
