--- a/cms/cmsapp/templates/cmsapp/login.html
+++ b/cms/cmsapp/templates/cmsapp/login.html
@@ -20,14 +20,16 @@
             <h3 hidden class="alert alert-light border mt-4 mb-4 rounded">Login Here</h3>
             
             {% for message in messages %}
-            <div class="container-fluid p-0">
-              <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
-                <div class="alert alert-primary  my-2 container text-align-center" >
+            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="alert alert-primary  my-2 container text-center" >
                     {{ message }}
                 </div>
-              </div>
+                
             </div>
-            {% endfor %}
+        {% endfor %}
             <form  method="POST">
                 
                 {% csrf_token %}
@@ -61,16 +63,6 @@
     </div>
 </div>
 
-</style>
-<br>
-<br>
-<footer class="text-center text-lg-start bg-light text-muted">
- 
-    <div class="text-center p-4 eidt" style="background-color: rgba(0, 0, 0, 0.05);">
-      ©Copyright:
-      <a class="text-reset fw-bold" href="">PI Innovations</a>
-    </div>
-    <!-- Copyright -->
-</footer>
+
 
 {% endblock %}
