--- a/cms/cmsapp/templates/cmsapp/login.html
+++ b/cms/cmsapp/templates/cmsapp/login.html
@@ -7,49 +7,46 @@
     <div class="p-4 m-4">
         <div class="col-lg-4 mt-4 border mb-4 mx-auto rounded pt-4">
             <div class="text-center col">
-            
-                <img 
-                src="{%static 'img/sikshyasala.png'%}" alt=""
-                class="my-3" style="height: 60px; width: 200px;">
-            <!-- <hr> -->
-            
-            <hr>
-			<div class="display-8"><h4>Log In</h4></div>
-			<hr>
+
+                <img src="{%static 'img/sikshyasala.png'%}" alt="" class="my-3" style="height: 60px; width: 200px;">
+                <!-- <hr> -->
+
+                <hr>
+                <div class="display-8">
+                    <h4>Log In</h4>
+                </div>
+                <hr>
             </div>
             <h3 hidden class="alert alert-light border mt-4 mb-4 rounded">Login Here</h3>
-            
+
             {% for message in messages %}
             <div class="alert {{ message.tags }} alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true">&times;</span>
                 </button>
-                <div class="alert alert-primary  my-2 container text-center" >
+                <div class="alert alert-primary  my-2 container text-center">
                     {{ message }}
                 </div>
-                
+
             </div>
-        {% endfor %}
-            <form  method="POST">
-                
+            {% endfor %}
+            <form method="POST">
+
                 {% csrf_token %}
 
                 <!-- email -->
                 <div class="form-group">
                     <label for="">Username</label>
-                    <input required type="text" name="username" id=""
-                    
-                    class=" form-control-sm form-control" placeholder="Uername">
+                    <input required type="text" name="username" id="" class=" form-control-sm form-control"
+                        placeholder="Uername">
                 </div>
 
 
                 <!-- password -->
                 <div class="form-group">
                     <label for="">Password</label>
-                    <input type="password" 
-                    name="password" 
-                    id=""
-                     class="form-control form-control-sm" placeholder="********">
+                    <input type="password" name="password" id="" class="form-control form-control-sm"
+                        placeholder="********">
                 </div>
 
                 <hr>
@@ -57,7 +54,7 @@
                     <input class="btn btn-sm btn-success col-lg-4" type="submit" value="Login">
                 </div>
 
-                
+
             </form>
         </div>
     </div>
