--- a/cms/cmsapp/templates/cmsapp/tokensend.html
+++ b/cms/cmsapp/templates/cmsapp/tokensend.html
@@ -4,59 +4,62 @@
 
 {%block content%}
 <style>
-    html,body { 
-	height: 100%; 
-}
+	html,
+	body {
+		height: 100%;
+	}
 
-.global-container{
-	height:100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #f5f5f5;
-}
+	.global-container {
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: #f5f5f5;
+	}
 
-form{
-	padding-top: 10px;
-	font-size: 14px;
-	margin-top: 30px;
-}
+	form {
+		padding-top: 10px;
+		font-size: 14px;
+		margin-top: 30px;
+	}
 
-.card-title{ font-weight:300; }
+	.card-title {
+		font-weight: 300;
+	}
 
-.btn{
-	font-size: 14px;
-	margin-top:20px;
-}
+	.btn {
+		font-size: 14px;
+		margin-top: 20px;
+	}
 
 
-.login-form{ 
-	width:330px;
-	margin:20px;
-}
+	.login-form {
+		width: 330px;
+		margin: 20px;
+	}
 
-.sign-up{
-	text-align:center;
-	padding:20px 0 0;
-}
+	.sign-up {
+		text-align: center;
+		padding: 20px 0 0;
+	}
 
-.alert{
-	margin-bottom:-30px;
-	font-size: 13px;
-	margin-top:20px;
-}
+	.alert {
+		margin-bottom: -30px;
+		font-size: 13px;
+		margin-top: 20px;
+	}
 </style>
 
 <div class="container my-5">
-<div class="jumbotron">
-  <h1 class="display text-center">Verify account</h1>
-  <p class="lead text-center">Please check your email to verify your account</p>
-  
-  <hr class="my-3">
-  <p class="text-center">Note:Check spam if email not received</p>
-  <p class="lead">
-    
-  </p>
-</div>
+	<div class="jumbotron">
+		<h1 class="display text-center">Verify account</h1>
+		<p class="lead text-center">Please check your email to verify your account</p>
+
+		<hr class="my-3">
+		<p class="text-center">Note:Check spam if email not received</p>
+		<p class="lead">
+
+		</p>
+	</div>
 </div>
 {%endblock content%}
