--- a/cms/cmsapp/templates/cmsapp/login.html
+++ b/cms/cmsapp/templates/cmsapp/login.html
@@ -50,12 +50,15 @@
                 </div>
 
                 <hr>
+                Already have an account? <a href="{%url 'register'%}" class="">Sign up</a>
+                <hr>
                 <div class="form-group">
                     <input class="btn btn-sm btn-success col-lg-4" type="submit" value="Login">
                 </div>
 
 
             </form>
+            
         </div>
     </div>
 </div>
