--- a/cms/cmsapp/templates/cmsapp/register.html
+++ b/cms/cmsapp/templates/cmsapp/register.html
@@ -79,6 +79,7 @@
                 </div>
 
                 <hr>
+                <p>Alread have an account? <a href="{%url 'login'%}">Sign in</a></p>
                 <div class="form-group">
                     <input class="btn btn-sm btn-secondary" type="submit" value="Create An Account ">
                 </div>
